src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
  }
  
.app {
  width: 80%;
  padding: 20px;
  margin: 0%;
  
}

.inputContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.showInfoBtn {
  display: block;
  background-color: gold;
  border: none;
  cursor: pointer;
  border-radius: 5px;
  width: 40%;
  margin-top: 5px;
}

.displayText {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.exchange {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-left: 60px;
  background: url("/src/images/BlackBackgroundCrypto.jpg");
  background-size: cover;
  color: rgb(255, 255, 255);
  border: 1px solid #ffffff;
  border-radius: 10px;
  padding: 0%; 
  margin: 35px auto; 
  width: 40%; 
  height: 62%; 
  overflow: hidden;
  position: relative;
  box-sizing: border-box;
  
}

.imageCrypto {
  clip-path: circle(50% at 50% 50%);
}


.showInfo:hover{
  opacity: 0,8;
}

.rate, .rateNoData, .symbolName {
  font-family: Georgia, 'Times New Roman', Times, serif;
}




.cryptoItem {
  display: flex;
  justify-content: start; /* Espacio entre el nombre y el precio */
  flex-direction: row;
  align-items: center;
  width: 30%;
  padding: 1px;
  margin: 5px 0;
  background-color: #535353;
  border: 1px solid #ffffff;
  border-radius: 5px;
}


.cryptoName {
  display: flex;
  justify-content: center; /* Espacio entre el nombre y el precio */
  align-items: center;
  width: 40%;
  padding: 3px;
  margin: 1px 0;
  background-color: #031516;
  border: 1px solid hsl(0, 0%, 87%);
  border-radius: 5px;
  color: rgb(123, 255, 0);
  font-family:'Times New Roman', Times, serif
}


.cryptoPrice {
  color: rgb(1, 3, 1);
  font-size: 16px;
  margin-left: 5px;
}

